<resources>
    <string name="app_name">Who Said That?</string>
    <string name="name">Enter your name here</string>
    <string name="welcome1">Welcome</string>
    <string name="welcome2">This a simple quiz game. All you need to do is identify who said the quote and tap/type the correct option. A score will be calculated in the end. Start by entering your name below. Good luck!</string>
    <string name="q1">\"Imagination is more important than knowledge.\"</string>
    <string name="q2">\"If music be the food of love, play on.\"</string>
    <string name="q3">\"The way to get started is to quit talking and begin doing.\"</string>
    <string name="q4">\"Simplicity is the ultimate sophistication.\"</string>
    <string name="q5">\"I skate where the puck is going to be, not where it has been.\"</string>
    <string name="q6">\"If you want to be happy, be.\"</string>
    <string name="q7">\"Whether you believe you can do a thing or not, you are right.\"</string>
    <string name="q8">\"The life which is unexamined is not worth living.\"</string>
    <string name="q9a">Mahatma Gandhi once said,</string>
    <string name="q9b">\"Live as if you were to die ______. Learn as if you were to live ______.\"</string>
    <string name="q10a">Oscar Wilde once said,</string>
    <string name="q10b">\"Be ______, everyone else is already ______.\"</string>
    <string name="share">Share score?</string>
    <string name="who">Who said:</string>
    <string name="result">Result</string>
    <string name="reset">Reset</string>
    <string name="sj">Steve Jobs</string>
    <string name="ae">Albert Einstein</string>
    <string name="in">Isaac Newton</string>
    <string name="nt">Nikola Tesla</string>
    <string name="gbs">George Bernard Shaw</string>
    <string name="ws">William Shakespeare</string>
    <string name="eap">Edgar Allen Poe</string>
    <string name="sk">Stephen King</string>
    <string name="wd">Walt Disney</string>
    <string name="pp">Pablo Picasso</string>
    <string name="ldv">Leonardo da Vinci</string>
    <string name="hf">Henry Ford</string>
    <string name="wg">Wayne Gretzky</string>
    <string name="zz">Zig Ziglar</string>
    <string name="ldc">Leonardo DiCaprio</string>
    <string name="bm">Bob Marley</string>
    <string name="th">Tony Hawk</string>
    <string name="wam">Wolfgang Amadeus Mozart</string>
    <string name="answer">Enter the answer here</string>
    <string name="q9_1">Tomorrow</string>
    <string name="q9_2">Today</string>
    <string name="q9_3">Never</string>
    <string name="q9_4">Forever</string>
    <string name="q10_1">Dead</string>
    <string name="q10_2">Cool</string>
    <string name="q10_3">Yourself</string>
    <string name="q10_4">Taken</string>
</resources>
